[package]
name        = "secretenv-backend-aws-secrets"
description = "SecretEnv — AWS Secrets Manager backend (supports #json-key=<field> URI fragment directive)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
secretenv-core.workspace = true
anyhow.workspace         = true
async-trait.workspace    = true
serde.workspace          = true
serde_json.workspace     = true
tokio.workspace          = true
toml.workspace           = true

[dev-dependencies]
secretenv-testing.workspace = true
tempfile.workspace          = true

[lints]
workspace = true
